//package webapp.users.signup
//
//import java.util.*
//
///**
// * Représente l'account domain model minimaliste pour la view
// */
//data class Avatar(
//    val id: UUID? = null,
//    val login: String? = null
//)