//package webapp.users.signup
//
///*=================================================================================*/
//data class PasswordChange(
//    val currentPassword: String? = null,
//    val newPassword: String? = null
//)